Refactor AI Modelling and Evaluation Notebooks
- Deleted the outdated AI Modelling notebook (3_AI_Modelling_Improved.ipynb) to streamline the project structure.
- Updated the Assessment and Evaluation notebook (4_Assessment_and_Evaluation.ipynb) to improve feature consistency checks during model evaluation.
- Added functionality to save and load feature names used during training for better model evaluation.
- Implemented checks for missing features and created them if they are simple enough.
- Enhanced the handling of non-numeric features in the test dataset to ensure compatibility with model expectations.
- Improved logging for feature shape and count mismatches in LSTM evaluation.

--- a/code/3_AI_Modelling_FIXED.ipynb
+++ b/code/3_AI_Modelling_FIXED.ipynb
@@ -100,14 +100,21 @@
     "    print(\"Creating comprehensive temporal features...\")\n",
     "    df_featured = data_df.copy()\n",
     "    \n",
+    "    # Ensure all numeric columns are float64 to prevent dtype issues\n",
+    "    numeric_cols = ['pm25_value', 'temp', 'humidity', 'wind_speed', 'precipitation']\n",
+    "    for col in numeric_cols:\n",
+    "        if col in df_featured.columns:\n",
+    "            df_featured[col] = pd.to_numeric(df_featured[col], errors='coerce')\n",
+    "    \n",
     "    # 1. CRITICAL: Lag features with diverse time horizons\n",
     "    print(\"Adding lag features...\")\n",
     "    lags = [1, 2, 3, 6, 12, 24, 48, 72]  \n",
     "    features_to_lag = ['pm25_value', 'temp', 'humidity', 'wind_speed', 'precipitation']\n",
     "    \n",
     "    for feature in features_to_lag:\n",
-    "        for lag in lags:\n",
-    "            df_featured[f'{feature}_lag_{lag}'] = df_featured[feature].shift(lag)\n",
+    "        if feature in df_featured.columns:\n",
+    "            for lag in lags:\n",
+    "                df_featured[f'{feature}_lag_{lag}'] = df_featured[feature].shift(lag)\n",
     "    \n",
     "    # 2. CRITICAL: Difference and trend features (captures change patterns)\n",
     "    print(\"Adding trend and difference features...\")\n",
@@ -123,10 +130,13 @@
     "    df_featured['pm25_pct_change_6h'] = df_featured['pm25_value'].pct_change(6)\n",
     "    df_featured['pm25_pct_change_24h'] = df_featured['pm25_value'].pct_change(24)\n",
     "    \n",
-    "    # Weather trends\n",
-    "    df_featured['temp_diff_6h'] = df_featured['temp'].diff(6)\n",
-    "    df_featured['humidity_diff_6h'] = df_featured['humidity'].diff(6)\n",
-    "    df_featured['wind_speed_diff_6h'] = df_featured['wind_speed'].diff(6)\n",
+    "    # Weather trends (using same naming convention as evaluation)\n",
+    "    if 'temp' in df_featured.columns:\n",
+    "        df_featured['temp_diff_6h'] = df_featured['temp'].diff(6)\n",
+    "    if 'humidity' in df_featured.columns:\n",
+    "        df_featured['humidity_diff_6h'] = df_featured['humidity'].diff(6)\n",
+    "    if 'wind_speed' in df_featured.columns:\n",
+    "        df_featured['wind_speed_diff_6h'] = df_featured['wind_speed'].diff(6)\n",
     "    \n",
     "    # 3. Rolling statistics with proper min_periods\n",
     "    print(\"Adding rolling statistics...\")\n",
@@ -142,22 +152,28 @@
     "        df_featured[f'pm25_max_{window}h'] = df_featured['pm25_value'].rolling(window=window, min_periods=min_periods).max()\n",
     "        \n",
     "        # Weather rolling features  \n",
-    "        df_featured[f'temp_mean_{window}h'] = df_featured['temp'].rolling(window=window, min_periods=min_periods).mean()\n",
-    "        df_featured[f'humidity_mean_{window}h'] = df_featured['humidity'].rolling(window=window, min_periods=min_periods).mean()\n",
-    "        df_featured[f'wind_speed_mean_{window}h'] = df_featured['wind_speed'].rolling(window=window, min_periods=min_periods).mean()\n",
+    "        if 'temp' in df_featured.columns:\n",
+    "            df_featured[f'temp_mean_{window}h'] = df_featured['temp'].rolling(window=window, min_periods=min_periods).mean()\n",
+    "        if 'humidity' in df_featured.columns:\n",
+    "            df_featured[f'humidity_mean_{window}h'] = df_featured['humidity'].rolling(window=window, min_periods=min_periods).mean()\n",
+    "        if 'wind_speed' in df_featured.columns:\n",
+    "            df_featured[f'wind_speed_mean_{window}h'] = df_featured['wind_speed'].rolling(window=window, min_periods=min_periods).mean()\n",
     "    \n",
     "    # 4. Volatility and variability measures\n",
     "    print(\"Adding volatility features...\")\n",
     "    df_featured['pm25_volatility_12h'] = df_featured['pm25_value'].rolling(window=12, min_periods=6).std()\n",
     "    df_featured['pm25_volatility_24h'] = df_featured['pm25_value'].rolling(window=24, min_periods=12).std()\n",
-    "    df_featured['temp_volatility_12h'] = df_featured['temp'].rolling(window=12, min_periods=6).std()\n",
-    "    df_featured['humidity_volatility_12h'] = df_featured['humidity'].rolling(window=12, min_periods=6).std()\n",
+    "    if 'temp' in df_featured.columns:\n",
+    "        df_featured['temp_volatility_12h'] = df_featured['temp'].rolling(window=12, min_periods=6).std()\n",
+    "    if 'humidity' in df_featured.columns:\n",
+    "        df_featured['humidity_volatility_12h'] = df_featured['humidity'].rolling(window=12, min_periods=6).std()\n",
     "    \n",
     "    # 5. Exponential moving averages (trend following)\n",
     "    print(\"Adding exponential moving averages...\")\n",
     "    df_featured['pm25_ema_6h'] = df_featured['pm25_value'].ewm(span=6, adjust=False).mean()\n",
     "    df_featured['pm25_ema_24h'] = df_featured['pm25_value'].ewm(span=24, adjust=False).mean()\n",
-    "    df_featured['temp_ema_12h'] = df_featured['temp'].ewm(span=12, adjust=False).mean()\n",
+    "    if 'temp' in df_featured.columns:\n",
+    "        df_featured['temp_ema_12h'] = df_featured['temp'].ewm(span=12, adjust=False).mean()\n",
     "    \n",
     "    # 6. Enhanced cyclical encoding\n",
     "    print(\"Adding cyclical time features...\")\n",
@@ -170,9 +186,12 @@
     "    \n",
     "    # 7. Interaction features\n",
     "    print(\"Adding interaction features...\")\n",
-    "    df_featured['wind_humidity_interaction'] = df_featured['wind_speed'] * df_featured['humidity']\n",
-    "    df_featured['temp_humidity_interaction'] = df_featured['temp'] * df_featured['humidity']\n",
-    "    df_featured['wind_temp_interaction'] = df_featured['wind_speed'] * df_featured['temp']\n",
+    "    if 'wind_speed' in df_featured.columns and 'humidity' in df_featured.columns:\n",
+    "        df_featured['wind_humidity_interaction'] = df_featured['wind_speed'] * df_featured['humidity']\n",
+    "    if 'temp' in df_featured.columns and 'humidity' in df_featured.columns:\n",
+    "        df_featured['temp_humidity_interaction'] = df_featured['temp'] * df_featured['humidity']\n",
+    "    if 'wind_speed' in df_featured.columns and 'temp' in df_featured.columns:\n",
+    "        df_featured['wind_temp_interaction'] = df_featured['wind_speed'] * df_featured['temp']\n",
     "    \n",
     "    # 8. Peak and valley detection\n",
     "    print(\"Adding peak detection features...\")\n",
@@ -188,14 +207,14 @@
     "    pm25_24h_max = df_featured['pm25_value'].rolling(window=24, min_periods=12).max()\n",
     "    df_featured['pm25_relative_position'] = (df_featured['pm25_value'] - pm25_24h_min) / (pm25_24h_max - pm25_24h_min + 1e-8)\n",
     "    \n",
-    "    # 10. Hour category encoding\n",
+    "    # 10. Hour category encoding (consistent naming)\n",
     "    print(\"Adding categorical time features...\")\n",
     "    hour_bins = [0, 6, 12, 18, 24]\n",
     "    hour_labels = ['night', 'morning', 'afternoon', 'evening']\n",
     "    df_featured['hour_category'] = pd.cut(df_featured.index.hour, bins=hour_bins, labels=hour_labels, include_lowest=True)\n",
     "    \n",
-    "    # One-hot encode\n",
-    "    hour_dummies = pd.get_dummies(df_featured['hour_category'], prefix='hour_cat')\n",
+    "    # One-hot encode with consistent naming\n",
+    "    hour_dummies = pd.get_dummies(df_featured['hour_category'], prefix='hour_cat', dtype=float)\n",
     "    df_featured = pd.concat([df_featured, hour_dummies], axis=1)\n",
     "    df_featured.drop('hour_category', axis=1, inplace=True)\n",
     "    \n",
@@ -212,12 +231,34 @@
     "    df_featured.dropna(inplace=True)\n",
     "    final_shape = df_featured.shape[0]\n",
     "    \n",
+    "    # 12. CRITICAL: Ensure all columns are numeric\n",
+    "    print(\"Ensuring all features are numeric...\")\n",
+    "    for col in df_featured.columns:\n",
+    "        if col != 'pm25_value':  # Keep target as is\n",
+    "            df_featured[col] = pd.to_numeric(df_featured[col], errors='coerce')\n",
+    "    \n",
+    "    # Final cleanup of any remaining NaNs introduced by conversion\n",
+    "    df_featured.dropna(inplace=True)\n",
+    "    final_final_shape = df_featured.shape[0]\n",
+    "    \n",
     "    print(f\"Feature engineering complete:\")\n",
-    "    print(f\"- Initial rows: {initial_shape}, Final rows: {final_shape}\")\n",
-    "    print(f\"- Rows dropped: {initial_shape - final_shape}\")\n",
+    "    print(f\"- Initial rows: {initial_shape}, Final rows: {final_final_shape}\")\n",
+    "    print(f\"- Rows dropped: {initial_shape - final_final_shape}\")\n",
     "    print(f\"- Initial NaNs: {initial_nans}\")\n",
     "    print(f\"- Features created: {len(df_featured.columns) - len(data_df.columns)}\")\n",
     "    print(f\"- PM2.5 variance after features: {df_featured['pm25_value'].var():.4f}\")\n",
+    "    \n",
+    "    # Verify all columns are numeric\n",
+    "    non_numeric = df_featured.select_dtypes(exclude=[np.number]).columns.tolist()\n",
+    "    if non_numeric:\n",
+    "        print(f\"⚠️  WARNING: Non-numeric columns detected: {non_numeric}\")\n",
+    "        for col in non_numeric:\n",
+    "            if col != 'pm25_value':\n",
+    "                df_featured[col] = pd.to_numeric(df_featured[col], errors='coerce')\n",
+    "        df_featured.dropna(inplace=True)\n",
+    "        print(f\"✅ Converted to numeric. Final shape: {df_featured.shape}\")\n",
+    "    else:\n",
+    "        print(\"✅ All features are numeric\")\n",
     "    \n",
     "    return df_featured"
    ]
@@ -302,10 +343,36 @@
     "    print(f\"Target variance: {y_train.var():.4f} (good if > 1.0)\")\n",
     "    print(f\"Target range: {y_train.min():.2f} to {y_train.max():.2f}\")\n",
     "    \n",
+    "    # CRITICAL: Verify data types before training\n",
+    "    print(\"Verifying data types...\")\n",
+    "    non_numeric_features = X_train.select_dtypes(exclude=[np.number]).columns.tolist()\n",
+    "    if non_numeric_features:\n",
+    "        print(f\"⚠️  Converting non-numeric features: {non_numeric_features}\")\n",
+    "        for col in non_numeric_features:\n",
+    "            X_train[col] = pd.to_numeric(X_train[col], errors='coerce')\n",
+    "            X_test[col] = pd.to_numeric(X_test[col], errors='coerce')\n",
+    "        # Drop any rows with NaN after conversion\n",
+    "        X_train.dropna(inplace=True)\n",
+    "        y_train = y_train.loc[X_train.index]\n",
+    "        X_test.dropna(inplace=True)\n",
+    "        y_test = y_test.loc[X_test.index]\n",
+    "        print(f\"✅ After cleanup: X_train {X_train.shape}, y_train {y_train.shape}\")\n",
+    "    \n",
+    "    # Ensure all data is float32 for TensorFlow\n",
+    "    X_train = X_train.astype(np.float32)\n",
+    "    y_train = y_train.astype(np.float32)\n",
+    "    X_test = X_test.astype(np.float32)\n",
+    "    y_test = y_test.astype(np.float32)\n",
+    "    \n",
     "    # Target scaling for LSTM\n",
     "    scaler_y = StandardScaler()\n",
-    "    y_train_scaled = scaler_y.fit_transform(y_train.values.reshape(-1, 1)).flatten()\n",
+    "    y_train_scaled = scaler_y.fit_transform(y_train.values.reshape(-1, 1)).flatten().astype(np.float32)\n",
     "    joblib.dump(scaler_y, f'/content/drive/MyDrive/AI_Sustainability_Project_lsa/scaler_y_h{h}.pkl')\n",
+    "    \n",
+    "    # Save feature names for evaluation consistency\n",
+    "    feature_names = X_train.columns.tolist()\n",
+    "    joblib.dump(feature_names, f'/content/drive/MyDrive/AI_Sustainability_Project_lsa/feature_names_h{h}.pkl')\n",
+    "    print(f\"✅ Saved {len(feature_names)} feature names for evaluation consistency\")\n",
     "    \n",
     "    # Cross-validation setup\n",
     "    tscv = TimeSeriesSplit(n_splits=5)\n",
@@ -330,54 +397,67 @@
     "    print(f\"RF Best RMSE: {np.sqrt(-rf_search.best_score_):.4f}\")\n",
     "    print(f\"RF Best params: {rf_search.best_params_}\")\n",
     "    \n",
-    "    # LSTM with improved architecture\n",
+    "    # LSTM with improved architecture and error handling\n",
     "    print(f\"\\nTraining LSTM...\")\n",
-    "    X_train_lstm = X_train.values.reshape(X_train.shape[0], 1, X_train.shape[1])\n",
+    "    try:\n",
+    "        # Ensure data is properly shaped and typed for LSTM\n",
+    "        X_train_lstm = X_train.values.astype(np.float32).reshape(X_train.shape[0], 1, X_train.shape[1])\n",
+    "        \n",
+    "        print(f\"LSTM input shape: {X_train_lstm.shape}\")\n",
+    "        print(f\"LSTM target shape: {y_train_scaled.shape}\")\n",
+    "        print(f\"Data types: X={X_train_lstm.dtype}, y={y_train_scaled.dtype}\")\n",
+    "        \n",
+    "        # Clear any previous models\n",
+    "        tf.keras.backend.clear_session()\n",
+    "        \n",
+    "        model_lstm = Sequential([\n",
+    "            LSTM(128, return_sequences=True, input_shape=(1, X_train.shape[1])),\n",
+    "            BatchNormalization(),\n",
+    "            Dropout(0.3),\n",
+    "            LSTM(64, return_sequences=True),\n",
+    "            BatchNormalization(), \n",
+    "            Dropout(0.3),\n",
+    "            LSTM(32),\n",
+    "            BatchNormalization(),\n",
+    "            Dropout(0.2),\n",
+    "            Dense(16, activation='relu'),\n",
+    "            Dense(1)\n",
+    "        ])\n",
+    "        \n",
+    "        model_lstm.compile(\n",
+    "            optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "            loss='mse',\n",
+    "            metrics=['mae']\n",
+    "        )\n",
+    "        \n",
+    "        callbacks = [\n",
+    "            EarlyStopping(monitor='val_loss', patience=20, restore_best_weights=True),\n",
+    "            ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=10, min_lr=1e-6)\n",
+    "        ]\n",
+    "        \n",
+    "        history = model_lstm.fit(\n",
+    "            X_train_lstm, y_train_scaled,\n",
+    "            epochs=200,\n",
+    "            batch_size=64,\n",
+    "            validation_split=0.2,\n",
+    "            callbacks=callbacks,\n",
+    "            verbose=1\n",
+    "        )\n",
+    "        \n",
+    "        model_lstm.save(f'/content/drive/MyDrive/AI_Sustainability_Project_lsa/lstm_model_h{h}.keras')\n",
+    "        print(f\"✅ LSTM trained successfully. Best val_loss: {min(history.history['val_loss']):.4f}\")\n",
+    "        \n",
+    "        # Clean up for next iteration\n",
+    "        del X_train_lstm, model_lstm, history\n",
+    "        tf.keras.backend.clear_session()\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ LSTM training failed for horizon {h}h: {e}\")\n",
+    "        print(f\"Skipping LSTM for this horizon and continuing...\")\n",
     "    \n",
-    "    model_lstm = Sequential([\n",
-    "        LSTM(128, return_sequences=True, input_shape=(1, X_train.shape[1])),\n",
-    "        BatchNormalization(),\n",
-    "        Dropout(0.3),\n",
-    "        LSTM(64, return_sequences=True),\n",
-    "        BatchNormalization(), \n",
-    "        Dropout(0.3),\n",
-    "        LSTM(32),\n",
-    "        BatchNormalization(),\n",
-    "        Dropout(0.2),\n",
-    "        Dense(16, activation='relu'),\n",
-    "        Dense(1)\n",
-    "    ])\n",
-    "    \n",
-    "    model_lstm.compile(\n",
-    "        optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
-    "        loss='mse',\n",
-    "        metrics=['mae']\n",
-    "    )\n",
-    "    \n",
-    "    callbacks = [\n",
-    "        EarlyStopping(monitor='val_loss', patience=20, restore_best_weights=True),\n",
-    "        ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=10, min_lr=1e-6)\n",
-    "    ]\n",
-    "    \n",
-    "    history = model_lstm.fit(\n",
-    "        X_train_lstm, y_train_scaled,\n",
-    "        epochs=200,\n",
-    "        batch_size=64,\n",
-    "        validation_split=0.2,\n",
-    "        callbacks=callbacks,\n",
-    "        verbose=1\n",
-    "    )\n",
-    "    \n",
-    "    model_lstm.save(f'/content/drive/MyDrive/AI_Sustainability_Project_lsa/lstm_model_h{h}.keras')\n",
-    "    print(f\"LSTM Best val_loss: {min(history.history['val_loss']):.4f}\")\n",
-    "    \n",
-    "    # Clean up for next iteration\n",
+    "    # Clean up target column for next iteration\n",
     "    train_df.drop('target_h', axis=1, inplace=True, errors='ignore')\n",
-    "    test_df.drop('target_h', axis=1, inplace=True, errors='ignore')\n",
-    "    \n",
-    "    # Clear memory\n",
-    "    del X_train_lstm, model_lstm, history\n",
-    "    tf.keras.backend.clear_session()"
+    "    test_df.drop('target_h', axis=1, inplace=True, errors='ignore')"
    ]
   },
   {
