--- a/code/4_Assessment_and_Evaluation.ipynb
+++ b/code/4_Assessment_and_Evaluation.ipynb
@@ -332,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ROBUST MODEL EVALUATION WITH FALLBACK OPTIONS\n",
+    "# ROBUST MODEL EVALUATION WITH FEATURE CONSISTENCY\n",
     "print(\"=== Starting Model Evaluation ===\")\n",
     "\n",
     "results = []\n",
@@ -344,14 +344,16 @@
     "    rf_file = f'rf_model_h{h}.pkl'\n",
     "    lstm_file = f'lstm_model_h{h}.keras'\n",
     "    scaler_file = f'scaler_y_h{h}.pkl'\n",
+    "    feature_file = f'feature_names_h{h}.pkl'\n",
     "    \n",
     "    existing_models[h] = {\n",
     "        'rf': rf_file in model_files,\n",
     "        'lstm': lstm_file in model_files,\n",
-    "        'scaler': scaler_file in model_files\n",
+    "        'scaler': scaler_file in model_files,\n",
+    "        'features': feature_file in model_files\n",
     "    }\n",
     "    \n",
-    "    print(f\"Horizon {h}h: RF={existing_models[h]['rf']}, LSTM={existing_models[h]['lstm']}, Scaler={existing_models[h]['scaler']}\")\n",
+    "    print(f\"Horizon {h}h: RF={existing_models[h]['rf']}, LSTM={existing_models[h]['lstm']}, Scaler={existing_models[h]['scaler']}, Features={existing_models[h]['features']}\")\n",
     "\n",
     "# If no models exist, create simple baseline models\n",
     "if not any(any(models.values()) for models in existing_models.values()):\n",
@@ -398,8 +400,12 @@
     "            scaler_y.fit(y_train.values.reshape(-1, 1))\n",
     "            joblib.dump(scaler_y, f'scaler_y_h{h}.pkl')\n",
     "            \n",
+    "            # Save feature names\n",
+    "            joblib.dump(X_train_h.columns.tolist(), f'feature_names_h{h}.pkl')\n",
+    "            \n",
     "            existing_models[h]['rf'] = True\n",
     "            existing_models[h]['scaler'] = True\n",
+    "            existing_models[h]['features'] = True\n",
     "            \n",
     "            print(f\"✅ Created baseline RF model for horizon {h}h\")\n",
     "\n",
@@ -408,9 +414,59 @@
     "for h in horizons:\n",
     "    print(f\"\\n--- Evaluating Horizon {h}h ---\")\n",
     "    \n",
+    "    # Load the exact feature names used during training\n",
+    "    training_features = None\n",
+    "    if existing_models[h]['features']:\n",
+    "        try:\n",
+    "            training_features = joblib.load(f'feature_names_h{h}.pkl')\n",
+    "            print(f\"✅ Loaded {len(training_features)} training feature names\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"⚠️  Could not load training features: {e}\")\n",
+    "    \n",
+    "    # If no training features available, use all available features\n",
+    "    if training_features is None:\n",
+    "        training_features = features_base\n",
+    "        print(f\"⚠️  Using all available features: {len(training_features)}\")\n",
+    "    \n",
     "    # Create target\n",
     "    y_test_h_actual = df_test['pm25_value'].shift(-h).dropna()\n",
-    "    X_test_h = df_test.loc[y_test_h_actual.index, features_base]\n",
+    "    \n",
+    "    # CRITICAL: Use only the features that were used during training\n",
+    "    available_features = df_test.columns.tolist()\n",
+    "    missing_features = [f for f in training_features if f not in available_features]\n",
+    "    \n",
+    "    if missing_features:\n",
+    "        print(f\"⚠️  Missing {len(missing_features)} training features:\")\n",
+    "        print(f\"     First 10 missing: {missing_features[:10]}\")\n",
+    "        \n",
+    "        # Try to create missing features if they're simple ones\n",
+    "        for feature in missing_features[:20]:  # Limit to avoid infinite loop\n",
+    "            if feature.endswith('_diff_6h'):\n",
+    "                base_feature = feature.replace('_diff_6h', '')\n",
+    "                if base_feature in df_test.columns:\n",
+    "                    df_test[feature] = df_test[base_feature].diff(6)\n",
+    "                    print(f\"     ✅ Created {feature}\")\n",
+    "            elif feature.startswith('hour_cat_'):\n",
+    "                # Create hour category features if missing\n",
+    "                if 'hour_cat_afternoon' not in df_test.columns:\n",
+    "                    hour_bins = [0, 6, 12, 18, 24]\n",
+    "                    hour_labels = ['night', 'morning', 'afternoon', 'evening']\n",
+    "                    hour_category = pd.cut(df_test.index.hour, bins=hour_bins, labels=hour_labels, include_lowest=True)\n",
+    "                    hour_dummies = pd.get_dummies(hour_category, prefix='hour_cat', dtype=float)\n",
+    "                    df_test = pd.concat([df_test, hour_dummies], axis=1)\n",
+    "                    print(f\"     ✅ Created hour category features\")\n",
+    "                    break\n",
+    "    \n",
+    "    # Use intersection of training features and available features\n",
+    "    usable_features = [f for f in training_features if f in df_test.columns]\n",
+    "    print(f\"✅ Using {len(usable_features)}/{len(training_features)} training features\")\n",
+    "    \n",
+    "    if len(usable_features) == 0:\n",
+    "        print(f\"❌ No usable features available for horizon {h}h\")\n",
+    "        continue\n",
+    "    \n",
+    "    # Prepare test data with exact features used in training\n",
+    "    X_test_h = df_test.loc[y_test_h_actual.index, usable_features]\n",
     "    \n",
     "    if len(X_test_h) == 0:\n",
     "        print(f\"❌ No test data available for horizon {h}h\")\n",
@@ -421,6 +477,16 @@
     "        continue\n",
     "    \n",
     "    print(f\"Test data: {len(X_test_h)} samples, target variance: {y_test_h_actual.var():.4f}\")\n",
+    "    print(f\"Feature shape: {X_test_h.shape}\")\n",
+    "    \n",
+    "    # Ensure all features are numeric\n",
+    "    non_numeric = X_test_h.select_dtypes(exclude=[np.number]).columns.tolist()\n",
+    "    if non_numeric:\n",
+    "        print(f\"⚠️  Converting non-numeric features: {non_numeric}\")\n",
+    "        for col in non_numeric:\n",
+    "            X_test_h[col] = pd.to_numeric(X_test_h[col], errors='coerce')\n",
+    "        X_test_h.dropna(inplace=True)\n",
+    "        y_test_h_actual = y_test_h_actual.loc[X_test_h.index]\n",
     "    \n",
     "    # Random Forest Evaluation\n",
     "    if existing_models[h]['rf']:\n",
@@ -477,8 +543,25 @@
     "            lstm = load_model(f'lstm_model_h{h}.keras')\n",
     "            scaler_y = joblib.load(f'scaler_y_h{h}.pkl')\n",
     "            \n",
-    "            # Reshape for LSTM\n",
-    "            X_test_h_lstm = np.reshape(X_test_h.values, (X_test_h.shape[0], 1, X_test_h.shape[1]))\n",
+    "            # Ensure X_test_h has the exact number of features expected by the model\n",
+    "            expected_features = lstm.input_shape[2]  # Get expected feature count from model\n",
+    "            actual_features = X_test_h.shape[1]\n",
+    "            \n",
+    "            print(f\"LSTM expects {expected_features} features, we have {actual_features}\")\n",
+    "            \n",
+    "            if actual_features != expected_features:\n",
+    "                print(f\"⚠️  Feature count mismatch! Adjusting...\")\n",
+    "                if actual_features > expected_features:\n",
+    "                    # Take first N features if we have too many\n",
+    "                    X_test_h = X_test_h.iloc[:, :expected_features]\n",
+    "                    print(f\"✅ Trimmed to {expected_features} features\")\n",
+    "                else:\n",
+    "                    # Skip LSTM if we don't have enough features\n",
+    "                    print(f\"❌ Not enough features for LSTM (need {expected_features}, have {actual_features})\")\n",
+    "                    continue\n",
+    "            \n",
+    "            # Reshape for LSTM with proper data type\n",
+    "            X_test_h_lstm = np.reshape(X_test_h.values.astype(np.float32), (X_test_h.shape[0], 1, X_test_h.shape[1]))\n",
     "            \n",
     "            lstm_pred_scaled = lstm.predict(X_test_h_lstm, verbose=0)\n",
     "            lstm_pred = scaler_y.inverse_transform(lstm_pred_scaled).flatten()\n",
