--- a/2.tex
+++ b/2.tex
@@ -90,13 +90,13 @@ EDA revealed:
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.8\textwidth]{pm25_distribution.png}
-\caption{PM2.5 Distribution (After Cleaning)}
+\includegraphics[width=0.8\textwidth]{code/images/plot_0_0_comprehensive.png}
+\caption{PM2.5 Distribution (Comprehensive)}
 \end{figure}
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.8\textwidth]{correlation_heatmap.png}
+\includegraphics[width=0.8\textwidth]{code/images/correlation_matrix_full.png}
 \caption{Correlation Heatmap}
 \end{figure}
 
